# kps_analyze_demo

./: .gitignore  CLAUDE.md  Dockerfile  README.md  example.html  example.py  main.py  pyproject.toml  pyqt_test.py  run-example-half-mock.sh  run-example-mock.sh  run-example.sh  run-mock.sh  run.sh
core/: __init__.py  analyzer.py  converter.py  kp2d_extractor.py  kp3d_reconstructor.py  pose_judger.py  processor.py  renderer.py  rep_counter.py  rules_loader.py
core/kp2d_extractor/: __init__.py  interface.py  mock.py  rtmpose.py
core/kp3d_reconstructor/: __init__.py  interface.py  mhformer.py  mock.py
core/rtmpose/: __init__.py  constants.py  extractor.py  utils.py
core/video_source/: CameraRgbVideoSource.py  IRgbVideoSource.py  MockRgbVideoSource.py  __init__.py
data/rules/: _哈克深蹲.json  倒蹬腿举.json  哈克深蹲.json  器械倒蹬.json  标准俯卧撑.json  高位下拉.json
mhformer-aidlite/lite_demo/: qnn_reconstruct.py
rtm-det-aidlite/: rtm_vision.py
sample_data/: example_2d_coco17_kps.npz
sample_data/original/: example_2d_h36m_kps.npz  example_3d_kps.npz
sample_data/small/: example_2d_coco17_kps.npz  example_2d_h36m_kps.npz  example_3d_kps.npz
static/: example.html  index.html
